------------------
Pylint's ChangeLog
------------------

What's New in Pylint 2.8.0?
===========================
Release date: Undefined

..
  Put new features here and also in 'doc/whatsnew/2.8.rst'

* Use a prescriptive message for ``unidiomatic-typecheck``

  Closes #3891

* Apply ``const-naming-style`` to module constants annotated with
  ``typing.Final``

* The packaging is now done via setuptools exclusively. ``doc``, ``tests``, ``man``, ``elisp`` and ``Changelog`` are
  not packaged anymore - reducing the size of the package by 75%. Debian packaging is now  (officially) done in
  https://salsa.debian.org/python-team/packages/pylint. The 'doc' extra-require has been removed. ``__pkginfo__`` now
  only contain ``__version__`` (also accessible with ``pylint.__version__``), other meta-information are still
  accessible with ``import importlib;metadata.metadata('pylint')``.

* Fix false-positive ``used-before-assignment`` in function returns.

  Closes #4301


What's New in Pylint 2.7.5?
===========================
Release date: Undefined

..
  Put bug fixes that will be cherry-picked to latest major version here

* Reactivates old counts in report mode.

  Closes #3819

* During detection of ``inconsistent-return-statements`` consider that ``assert False`` is a return node.

  Closes #4019

* Run will not fail if score exactly equals ``config.fail_under`.

* Functions that never returns may declare ``NoReturn`` as type hints, so that
  ``inconsistent-return-statements`` is not emitted.

  Closes #4122, #4188

* Improved protected access checks to allow access inside class methods

  Closes #1159

* Fix issue with PEP 585 syntax and the use of ``collections.abc.Set``

* Fix issue that caused class variables annotated with ``typing.ClassVar`` to be
  identified as class constants. Now, class variables annotated with
  ``typing.Final`` are identified as such.

  Closes #4277

* Continuous integration with read the doc has been added.

  Closes #3850
